# SAFMC

./: README.md  README_old.md
PX4_EKF/: rcS
apriltag_ros/: CMakeLists.txt  package.xml
apriltag_ros/config/: tags.yaml  tags_different.yaml
apriltag_ros/include/kf/: kalmanFilter.cpp  kalmanFilter.h
apriltag_ros/launch/: continuous_detection.launch  safmc_uav_detection.launch  safmc_uav_detection_swarm_5.launch  search_swarm_simulation_8.launch  uav_detection_single.launch  uav_detection_single_original.launch  uav_detection_swarm8.launch  uav_detection_swarm_5.launch
apriltag_ros/msg/: DroneTagDetection.msg  DroneTagDetectionArray.msg
apriltag_ros/rviz/: tag_det.rviz  tag_safmc.rviz
apriltag_ros/src/: pub_imgtoQGC.cpp  tag_detect.cpp  tag_result_pub.cpp  tag_result_pub_original.cpp  tag_result_safmc.cpp  tag_result_safmc_single.cpp
controller/control/: CMakeLists.txt  package.xml
controller/control/launch/: px4_single_ctrl.launch  px4_swarm_ctrl.launch
controller/control/src/: cxr_egoctrl_v1.cpp  px4_basic_ctrl.cpp
controller/geometric_controller/include/geometric_controller/: geometric_controller.h
controller/geometric_controller/launch/: gazebo_sim_controller.launch
controller/geometric_controller/src/: geometric_controller.cpp
gazebo/gazebo_launch/: search_single_simulation copy.launch  search_single_simulation.launch  search_swarm_simulation.launch
gazebo/gazebo_models/Bound_Wall/: model.config  model.sdf
gazebo/gazebo_models/Danger_10/: model.config  model.sdf
gazebo/gazebo_models/Danger_10/materials/scripts/: Danger_10.material
gazebo/gazebo_models/Danger_11/: model.config  model.sdf
gazebo/gazebo_models/Danger_11/materials/scripts/: Danger_11.material
gazebo/gazebo_models/Danger_8/: model.config  model.sdf
gazebo/gazebo_models/Danger_8/materials/scripts/: Danger_8.material
gazebo/gazebo_models/Danger_9/: model.config  model.sdf
gazebo/gazebo_models/Danger_9/materials/scripts/: Danger_9.material
gazebo/gazebo_models/SAFMC_Pillar/: model.config  model.sdf
gazebo/gazebo_models/SAFMC_WALL/: model.config  model.sdf
gazebo/gazebo_models/SAFMC_WALL_similar/: model.config  model.sdf
gazebo/gazebo_models/Tag36h11_0/: model.config  model.sdf
gazebo/gazebo_models/Tag36h11_0/materials/scripts/: Tag36h11_0.material
gazebo/gazebo_models/Tag36h11_1/: model.config  model.sdf
gazebo/gazebo_models/Tag36h11_1/materials/scripts/: Tag36h11_1.material
gazebo/gazebo_models/Tag36h11_2/: model.config  model.sdf
gazebo/gazebo_models/Tag36h11_2/materials/scripts/: Tag36h11_2.material
gazebo/gazebo_models/VICTIM_0/: model.config  model.sdf
gazebo/gazebo_models/VICTIM_0/materials/scripts/: VICTIM_0.material
gazebo/gazebo_models/VICTIM_1/: model.config  model.sdf
gazebo/gazebo_models/VICTIM_1/materials/scripts/: VICTIM_1.material
gazebo/gazebo_models/VICTIM_2/: model.config  model.sdf
gazebo/gazebo_models/VICTIM_2/materials/scripts/: VICTIM_2.material
gazebo/gazebo_models/VICTIM_3/: model.config  model.sdf
gazebo/gazebo_models/VICTIM_3/materials/scripts/: VICTIM_3.material
gazebo/gazebo_models/VICTIM_4/: model.config  model.sdf
gazebo/gazebo_models/VICTIM_4/materials/scripts/: VICTIM_4.material
gazebo/gazebo_models/VICTIM_5/: model.config  model.sdf
gazebo/gazebo_models/VICTIM_5/materials/scripts/: VICTIM_5.material
gazebo/gazebo_models/VICTIM_6/: model.config  model.sdf
gazebo/gazebo_models/VICTIM_6/materials/scripts/: VICTIM_6.material
gazebo/gazebo_models/VICTIM_7/: model.config  model.sdf
gazebo/gazebo_models/VICTIM_7/materials/scripts/: VICTIM_7.material
gazebo/gazebo_models/iris_realsense_downward_camera/: iris_realsense_downward_camera.sdf  model.config
gazebo/gazebo_worlds/: SAFMC.world  SAFMC_Apriltag.world  SAFMC_different_id.world  SAFMC_offset3m.world  SAFMC_with_different_id_obstacles.world  SAFMC_with_pillar_unknown.world  SAFMC_without_apriltag.world  mission_tag.world  tag36h11_easy.world
gazebo/rviz/: tag_det.rviz  traj.rviz
odom_visualization/: CMakeLists.txt
odom_visualization/include/: CameraPoseVisualization.cpp
odom_visualization/search_aera/: search_aera.csv
odom_visualization/src/: odom_visualization.cpp
simtools/: CMakeLists.txt  package.xml
simtools/launch/: real_gazebo_pose.launch
simtools/src/: real_gazebo_pose.cpp
